# rust_crate

input_crate/: Cargo.toml
input_crate/src/: lib.rs
